--- a/rental-ui/rental-ui/angular.json
+++ b/rental-ui/rental-ui/angular.json
@@ -25,15 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "./node_modules/ngx-toastr/toastr.css"  
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/popper.js/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              
             ],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -96,7 +93,6 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -104,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
